add css text formatting class

--- a/index.html
+++ b/index.html
@@ -1,12 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>HCD</title>
+    <title>Key Performance Indicator | Human Centered Design</title>
+    <link href="https://fonts.googleapis.com/css?family=Archivo+Black|Work+Sans:400,600" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/normalize.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
 </head>
+
 <body>
-    
+    <header class="section section--pink">
+        <small class="tiny">09/18 - 01/19</small>
+        <h1 class="title title--big">Human<br> Centered<br> Design</h1>
+        <h2 class="title title--medium">Key<br> Performance<br> Indicator</h2>
+        <p>
+            Key Performance Indicator ou KPI sont des mesures quantitatives qui permettent d’évaluer les
+            performances et l’efficacité et indique si les objectifs du site sont ceux souhaités.
+        </p>
+        <p>
+            Les KPIs utilisés sont différents en fonction du projet, c’est à nous de séléctionner les indicateurs
+            les plus pertinants.
+        </p>
+    </header>
+    <main>
+        <section class="section">
+            <h3 class="title">Acte<br> de conversion<br> & top task</h3>
+            <p>L’acte de conversion est l’objectif principal de la page souhaité par la propriétaire du site</p>
+            <p>
+                Une top task est quant à elle la fonctionnalité qui intéresse l’utilisateur lors de sa visite sur
+                lapage.
+            </p>
+            <img class="vector" src="assets/images/conversion.svg" alt="">
+            <p>En général, l’acte de conversion est mis en en avant par rapport au reste du contenu.</p>
+        </section>
+    </main>
+    <footer>
+
+    </footer>
 </body>
+
 </html>
