modify color palette

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 </head>
 
 <body>
-    <header class="section section--pink">
-        <small class="tiny">09/18 - 01/19</small>
+    <header class="section section--blue">
+        <small class="tiny">09/18&#8239;&mdash;&#8239;01/19</small>
         <h1 class="title title--big">Human<br> Centered<br> Design</h1>
         <h2 class="title title--medium">Key<br> Performance<br> Indicator</h2>
         <p>
@@ -28,14 +28,65 @@
     </header>
     <main>
         <section class="section">
-            <h3 class="title">Acte<br> de conversion<br> & top task</h3>
+            <h3 class="title">Acte de<br> conversion<br> & top task</h3>
             <p>L’acte de conversion est l’objectif principal de la page souhaité par la propriétaire du site</p>
             <p>
                 Une top task est quant à elle la fonctionnalité qui intéresse l’utilisateur lors de sa visite sur
                 lapage.
             </p>
-            <img class="vector" src="assets/images/conversion.svg" alt="">
+            <img class="section__img" src="assets/images/conversion.svg" alt="">
             <p>En général, l’acte de conversion est mis en en avant par rapport au reste du contenu.</p>
+        </section>
+        <section class="section section--black">
+            <h3 class="title">Taux de<br> conversion</h3>
+            <p>
+                Ce taux est un rapport entre le nombre de visiteur et le nombre de personne qui vont réaliser l’acte de
+                conversion.
+            </p>
+            <img src="assets/images/taux-conversion.svg" alt="" class="section__img">
+            <p>
+                Lors de l’analyse de ces taux, il est important de bien recontextualiser le site. Le taux peut indiquer
+                différentes choses en fonction de l’objectif du site, un taux semblant faible aux premiers abords
+                peut-être bon pour certaines pages comme mauvais pour d’autres.
+            </p>
+        </section>
+        <section class="section">
+            <h1 class="title">Tunnel de<br> conversion</h1>
+            <p>Il s’agit du processus partant de l’arrivé du visiteur sur le site jusqu’à la réalisation de l’acte de
+                conversion.</p>
+            <img src="assets/images/tunnel-conversion.svg" alt="" class="section__img">
+            <p>Un tunnel efficace est réalisé de sorte à limiter le nombre d’utilisateur perdu à chaque étape.</p>
+        </section>
+        <section class="section section--blue">
+            <h3 class="title">Taux de rebond</h3>
+            <p>
+                Ce taux est le nombre d’utilisateurs arrivé sur le site et est partis aussitôt sans visiter d’autres
+                pages. Le visiteur à rebondi lorsque&#8239;:
+            </p>
+            <ul class="list">
+                <li class="list__item">il a cliqué sur un lien externe;</li>
+                <li class="list__item">il a fermé l'onglet ou la fenêtre;</li>
+                <li class="list__item">il a tapé une nouvelle URL;</li>
+                <li class="list__item">il a cliqué sur 'Précédent'.</li>
+            </ul>
+            <p>Le taux de rebond dépend de type de page, comme pour le taux de conversion, avoir eu beaucoup
+                d’utilisateurs qui ont rebondis peut être une bonne chose comme une mauvaise.</p>
+        </section>
+        <section class="section">
+            <h3 class="title">Page load</h3>
+            <p>
+                Il s’agit du temps de chargement du site, souvent négliger, mais quelques secondes peuvent avoir un
+                impact énorme nottament sur la manière dont l’utilisateur va aborde la page par le suite.
+            </p>
+            <p>Pour de gros sites telle que Amazon, cela représente de gigantesque sommes d’argent.</p>
+            <p>
+                Avoir un temps de chargement cours demande quelques optimisations et du temps, après quoi vous serez
+                peut-être récompensé d’un magnifique 100 sur Google Page Insight.
+            </p>
+        </section>
+        <section class="section">
+            <h3 class="title">A/B Testing</h3>
+            <p></p>
         </section>
     </main>
     <footer>
