add images placeholder

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
                 <li class="list__item">il a tapé une nouvelle URL;</li>
                 <li class="list__item">il a cliqué sur 'Précédent'.</li>
             </ul>
+            <img src="https://placehold.it/150" alt="" class="section__img">
             <p>Le taux de rebond dépend de type de page, comme pour le taux de conversion, avoir eu beaucoup
                 d’utilisateurs qui ont rebondis peut être une bonne chose comme une mauvaise.</p>
         </section>
@@ -79,6 +80,7 @@
                 impact énorme nottament sur la manière dont l’utilisateur va aborde la page par le suite.
             </p>
             <p>Pour de gros sites telle que Amazon, cela représente de gigantesque sommes d’argent.</p>
+            <img src="https://placehold.it/150" alt="" class="section__img">
             <p>
                 Avoir un temps de chargement cours demande quelques optimisations et du temps, après quoi vous serez
                 peut-être récompensé d’un magnifique 100 sur Google Page Insight.
