fix image sizes

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,93 +9,127 @@
         <link rel="stylesheet" href="assets/css/normalize.css">
         <link rel="stylesheet" href="assets/css/styles.css">
     </head>
-
     <body>
+        <!-- Landing -->
         <header class="section section--blue header">
             <small class="tiny">09/18&#8239;&mdash;&#8239;01/19</small>
             <h1 class="title title--big">Human<br> Centered<br> Design</h1>
             <h2 class="title title--medium">Key<br> Performance<br> Indicator</h2>
-            <ul class="header__texts">
-                <li>
+            <div class="container">
+                <p>
                     Key Performance Indicator ou KPI sont des mesures quantitatives qui permettent d’évaluer les
                     performances et l’efficacité du site, avec les résultats, on peut voir si les objectifs sont
                     atteints.
-                </li>
-                <li>
+                </p>
+                <p>
                     Les KPIs utilisés sont différents en fonction du projet, c’est à la personne qui s’occupe du site
                     de sélectionner les indicateurs les plus pertinents.
-                </li>
-            </ul>
+                </p>
+            </div>
         </header>
+        <!-- Content -->
         <main>
+            <!-- Acte de conversion -->
             <section class="section">
                 <h3 class="title">Acte de<br> conversion<br> & top task</h3>
-                <p>L’acte de conversion est l’objectif principal de la page souhaité par la propriétaire du site.</p>
-                <p>
-                    Une top task, est quant à elle la fonctionnalité qui intéresse l’utilisateur lors de sa visite sur
-                    la page.
-                </p>
-                <p>En général, l’acte de conversion est mis en en avant par rapport au reste du contenu.</p>
-                <img class="section__img" src="assets/images/conversion.svg" alt="illustration acte de conversion">
+                <div class="container">
+                    <div class="container__textBox">
+                        <p>
+                            L’acte de conversion est l’objectif principal de la page souhaité par la propriétaire du
+                            site.
+                        </p>
+                        <p>
+                            Une top task, est quant à elle la fonctionnalité qui intéresse l’utilisateur lors de sa
+                            visite sur la page.
+                        </p>
+                        <p>En général, l’acte de conversion est mis en en avant par rapport au reste du contenu.</p>
+                    </div>
+                    <img class="container__img container__img--bigger" src="assets/images/conversion.svg" alt="illustration acte de conversion">
+                </div>
             </section>
-            <section class="section section--black">
+            <!-- Taux de conversion -->
+            <section class="section section--black section--reverse">
                 <h3 class="title">Taux de<br> conversion</h3>
-                <p>
-                    Ce taux est un rapport entre le nombre de visiteurs ayant visité la page et ceux qui vont réaliser
-                    l’acte de conversion.
-                </p>
-                <p>
-                    Lors de l’analyse de ces taux, il est important de bien contextualiser le site. Il peut indiquer
-                    différentes choses en fonction de l’objectif du site, un taux semblant faible aux premiers abords
-                    peut-être bons pour certaines pages comme mauvais pour d’autres.
-                </p>
-                <img class="section__img" src="assets/images/taux-conversion.svg" alt="Illustration taux de conversion">
+                <div class="container">
+                    <div class="container__textBox">
+                        <p>
+                            Ce taux est un rapport entre le nombre de visiteurs ayant visité la page et ceux qui vont
+                            réaliser l’acte de conversion.
+                        </p>
+                        <p>
+                            Lors de l’analyse de ces taux, il est important de bien contextualiser le site. Il peut
+                            indiquer différentes choses en fonction de l’objectif du site, un taux semblant faible aux
+                            premiers abords peut-être bons pour certaines pages comme mauvais pour d’autres.
+                        </p>
+                    </div>
+                    <img class="container__img container__img--smaller" src="assets/images/taux-conversion.svg" alt="Illustration taux de conversion">
+                </div>
             </section>
+            <!-- Tunnel de conversion -->
             <section class="section">
                 <h1 class="title">Tunnel de<br> conversion</h1>
-                <p>
-                    Il s’agit du processus partant de l’arrivée du visiteur sur le site jusqu’à la réalisation de
-                    l’acte de conversion.
-                </p>
-                <p>
-                    Un tunnel efficace est réalisé de manière à limiter le nombre d’utilisateurs perdu après chaque
-                    étape.
-                </p>
-                <img class="section__img" src="assets/images/tunnel-conversion.svg" alt="Illustration tunnel de conversion">
+                <div class="container">
+                    <div class="container__textBox">
+                        <p>
+                            Il s’agit du processus partant de l’arrivée du visiteur sur le site jusqu’à la réalisation
+                            de l’acte de conversion.
+                        </p>
+                        <p>
+                            Un tunnel efficace est réalisé de manière à limiter le nombre d’utilisateurs perdu après
+                            chaque étape.
+                        </p>
+                    </div>
+                    <img class="container__img" src="assets/images/tunnel-conversion.svg" alt="Illustration tunnel de conversion">
+                </div>
             </section>
-            <section class="section section--blue">
+            <!-- Taux de rebond -->
+            <section class="section section--blue section--reverse">
                 <h3 class="title">Taux de rebond</h3>
-                <p>
-                    Ce taux indique le nombre d’utilisateurs arrivé sur le site et qui en sont partis sans visiter
-                    d’autres pages. On considère comme rebond lorsque&#8239;:
-                </p>
-                <ul class="list">
-                    <li class="list__item">il a cliqué sur un lien externe;</li>
-                    <li class="list__item">il a fermé l’onglet ou la fenêtre;</li>
-                    <li class="list__item">il a tapé une nouvelle URL;</li>
-                    <li class="list__item">il a cliqué sur &laquo;&#8239;Précédent&#8239;&raquo;.</li>
-                </ul>
-                <p>
-                    Le taux de rebond dépend de type de page, comme pour le taux de conversion, avoir eu beaucoup
-                    d’utilisateurs qui ont rebondis peut être une bonne chose comme une mauvaise.
-                </p>
-                </section>
+                <div class="container">
+                    <div class="container__textBox">
+                        <p>
+                            Ce taux indique le nombre d’utilisateurs arrivé sur le site et qui en sont partis sans
+                            visiter d’autres pages. On considère comme rebond lorsque&#8239;:
+                        </p>
+                        <ul class="list">
+                            <li class="list__item">il a cliqué sur un lien externe;</li>
+                            <li class="list__item">il a fermé l’onglet ou la fenêtre;</li>
+                            <li class="list__item">il a tapé une nouvelle URL;</li>
+                            <li class="list__item">il a cliqué sur &laquo;&#8239;Précédent&#8239;&raquo;.</li>
+                        </ul>
+                        <p>
+                            Le taux de rebond dépend de type de page, comme pour le taux de conversion, avoir eu
+                            beaucoup d’utilisateurs qui ont rebondis peut être une bonne chose comme une mauvaise.
+                        </p>
+                        <img class="container__img" src="https://placehold.it/150" alt="">
+                    </div>
+                </div>
+            </section>
+            <!-- Page load -->
             <section class="section">
                 <h3 class="title">Page load</h3>
-                <p>
-                    Il s’agit du temps de chargement du site, souvent négligé, il permet de gagnés plusieurs secondes
-                    et peut avoir un impact énorme, notamment sur la manière dont l’utilisateur va aborde la page par
-                    la suite.
-                </p>
-                <p>Pour de gros sites tels que Amazon, quelques secondes représentent de gigantesques sommes d’argent.</p>
-                <p>
-                    Avoir un temps de chargement court demande plusieurs optimisations et du temps, néanmoins, c’est
-                    une étape primordiale pour avoir un site performant. Et puis après toutes ces optimisations, vous
-                    serez peut-être récompensé d’un magnifique 100 sur
-                    <a href="https://developers.google.com/speed/pagespeed/insights/">Google Page Insight</a>.
-                    <img class="section__img" src="assets/images/page-load.svg" alt="Illustration page load">
-                </p>
+                <div class="container">
+                    <div class="container__textBox">
+                        <p>
+                            Il s’agit du temps de chargement du site, souvent négligé, il permet de gagnés plusieurs
+                            secondes et peut avoir un impact énorme, notamment sur la manière dont l’utilisateur va
+                            aborde la page par la suite.
+                        </p>
+                        <p>
+                            Pour de gros sites tels que Amazon, quelques secondes représentent de gigantesques sommes
+                            d’argent.
+                        </p>
+                        <p>
+                            Avoir un temps de chargement court demande plusieurs optimisations et du temps, néanmoins,
+                            c’est une étape primordiale pour avoir un site performant. Et puis après toutes ces
+                            optimisations, vous serez peut-être récompensé d’un magnifique 100 sur
+                            <a href="https://developers.google.com/speed/pagespeed/insights/">Google Page Insight</a>.
+                        </p>
+                    </div>
+                    <img class="container__img" src="assets/images/page-load.svg" alt="Illustration page load">
+                </div>
             </section>
+            <!-- A/B Testing -->
             <section class="section section--black">
                 <h3 class="title">A/B Testing</h3>
                 <p>
@@ -108,8 +141,9 @@
                     Pour que ces tests soient pertinents et intéressants, l’A/B Test doit être effectuer sur des
                     sites avec beaucoup de visite.
                 </p>
-                <img class="section__img" src="assets/images/ab-testing.svg" alt="Illustration A/B testing">
+                <img class="container__img" src="assets/images/ab-testing.svg" alt="Illustration A/B testing">
             </section>
+            <!-- Data Driven Design -->
             <section class="section">
                 <h3 class="title">Data Driven Design</h3>
                 <p>
@@ -117,8 +151,9 @@
                     résultat obtenu avec les différents KPIs et A/B Tests mis en place. Afin d'avoir le site le plus
                     efficace, il faut tester, modifier, retester et ainsi de suite jusqu’à avoir le résultat optimal.
                 </p>
-                <img class="section__img" src="assets/images/data-driven.svg" alt="Illustration data driven design">
+                <img class="container__img" src="assets/images/data-driven.svg" alt="Illustration data driven design">
             </section>
+            <!-- Données quantitatives -->
             <section class="section section--blue">
                 <h3 class="title">Données quantitatives</h3>
                 <p>
@@ -131,13 +166,13 @@
                 </p>
             </section>
         </main>
+        <!-- Footer -->
         <footer class="section section--black">
-            <ul class="list list--footer">
+            <ul class="list list--uppercase">
                 <li class="list__item">Réalisé avec &hearts;</li>
                 <li class="list__item">Par<a href="https://benjamindossantos.be"> Benjamin Dos santos</a></li>
                 <li class="list__item"><a href="http://dwm.re">DWM</a> | <a href="https://www.heaj.be/fr">HEAJ</a> &copy;</li>
             </ul>
         </footer>
     </body>
-
 </html>
