add css desktop layout + clean css

--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
                 </div>
             </section>
             <!-- Taux de conversion -->
-            <section class="section section--black section--reverse">
+            <section class="section section--black">
                 <h3 class="title">Taux de<br> conversion</h3>
-                <div class="container">
+                <div class="container container--reverse">
                     <div class="container__textBox">
                         <p>
                             Ce taux est un rapport entre le nombre de visiteurs ayant visité la page et ceux qui vont
@@ -83,9 +83,9 @@
                 </div>
             </section>
             <!-- Taux de rebond -->
-            <section class="section section--blue section--reverse">
+            <section class="section section--blue">
                 <h3 class="title">Taux de rebond</h3>
-                <div class="container">
+                <div class="container container--reverse">
                     <div class="container__textBox">
                         <p>
                             Ce taux indique le nombre d’utilisateurs arrivé sur le site et qui en sont partis sans
@@ -101,8 +101,8 @@
                             Le taux de rebond dépend de type de page, comme pour le taux de conversion, avoir eu
                             beaucoup d’utilisateurs qui ont rebondis peut être une bonne chose comme une mauvaise.
                         </p>
-                        <img class="container__img" src="https://placehold.it/150" alt="">
                     </div>
+                    <img class="container__img" src="https://placehold.it/150" alt="">
                 </div>
             </section>
             <!-- Page load -->
@@ -132,38 +132,48 @@
             <!-- A/B Testing -->
             <section class="section section--black">
                 <h3 class="title">A/B Testing</h3>
-                <p>
-                    Le principe de ces tests est de mettre à disposition plusieurs versions différentes du site (deux
-                    ou plus). Permettant de voir quelle version est la plus efficace. Le but étant de mettre en place
-                    une version plus performante et obtenant plus de taux de conversion.
-                </p>
-                <p>
-                    Pour que ces tests soient pertinents et intéressants, l’A/B Test doit être effectuer sur des
-                    sites avec beaucoup de visite.
-                </p>
-                <img class="container__img" src="assets/images/ab-testing.svg" alt="Illustration A/B testing">
+                <div class="container container--reverse">
+                    <div class="container__textBox">
+                        <p>
+                            Les KPIs donnent accès à des données quantitatives qui permettent d’améliorer le projet
+                            contrairement aux données qualitatives qui permettent de penser le projet.
+                        </p>
+                        <p>
+                            Il est essentiel de penser le projet sur base des données qualitatives au risque de récolter les
+                            données quantitatives qui ne serviront pas à grand-chose étant donné que le projet ne sera pas bon.
+                        </p>
+                    </div>
+                    <img class="container__img" src="assets/images/ab-testing.svg" alt="Illustration A/B Testing">
+                </div>
             </section>
             <!-- Data Driven Design -->
             <section class="section">
                 <h3 class="title">Data Driven Design</h3>
-                <p>
-                    Cette méthode divisée en quatre étapes vise à la répétition des étapes et à l’amélioration grâce au
-                    résultat obtenu avec les différents KPIs et A/B Tests mis en place. Afin d'avoir le site le plus
-                    efficace, il faut tester, modifier, retester et ainsi de suite jusqu’à avoir le résultat optimal.
-                </p>
-                <img class="container__img" src="assets/images/data-driven.svg" alt="Illustration data driven design">
+                <div class="container">
+                    <div class="container__textBox">
+                        <p>
+                            Cette méthode divisée en quatre étapes vise à la répétition des étapes et à l’amélioration grâce au
+                            résultat obtenu avec les différents KPIs et A/B Tests mis en place. Afin d'avoir le site le plus
+                            efficace, il faut tester, modifier, retester et ainsi de suite jusqu’à avoir le résultat optimal.
+                        </p>
+                    </div>
+                    <img class="container__img" src="assets/images/data-driven.svg" alt="Illustration data driven design">
+                </div>
             </section>
             <!-- Données quantitatives -->
             <section class="section section--blue">
                 <h3 class="title">Données quantitatives</h3>
-                <p>
-                    Les KPIs donnent accès à des données quantitatives qui permettent d’améliorer le projet
-                    contrairement aux données qualitatives qui permettent de penser le projet.
-                </p>
-                <p>
-                    Il est essentiel de penser le projet sur base des données qualitatives au risque de récolter les
-                    données quantitatives qui ne serviront pas à grand-chose étant donné que le projet ne sera pas bon.
-                </p>
+                <div class="container">
+                    <p>
+                        Les KPIs donnent accès à des données quantitatives qui permettent d’améliorer le projet
+                        contrairement aux données qualitatives qui permettent de penser le projet.
+                    </p>
+                    <p>
+                        Il est essentiel de penser le projet sur base des données qualitatives au risque de récolter
+                        les données quantitatives qui ne serviront pas à grand-chose étant donné que le projet ne sera
+                        pas bon.
+                    </p>
+                </div>
             </section>
         </main>
         <!-- Footer -->
