--- a/index.html
+++ b/index.html
@@ -4,7 +4,25 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Key Performance Indicator | Human Centered Design</title>
-        <link href="https://fonts.googleapis.com/css?family=Archivo+Black|Work+Sans:400,600" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Archivo+Black|Work+Sans:400,600,800" rel="stylesheet">
+        <!-- Favicon -->
+        <link rel="apple-touch-icon" sizes="57x57" href="assets/favicon/apple-icon-57x57.png">
+        <link rel="apple-touch-icon" sizes="60x60" href="assets/favicon/apple-icon-60x60.png">
+        <link rel="apple-touch-icon" sizes="72x72" href="assets/favicon/apple-icon-72x72.png">
+        <link rel="apple-touch-icon" sizes="76x76" href="assets/favicon/apple-icon-76x76.png">
+        <link rel="apple-touch-icon" sizes="114x114" href="assets/favicon/apple-icon-114x114.png">
+        <link rel="apple-touch-icon" sizes="120x120" href="assets/favicon/apple-icon-120x120.png">
+        <link rel="apple-touch-icon" sizes="144x144" href="assets/favicon/apple-icon-144x144.png">
+        <link rel="apple-touch-icon" sizes="152x152" href="assets/favicon/apple-icon-152x152.png">
+        <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-icon-180x180.png">
+        <link rel="icon" type="image/png" sizes="192x192"  href="assets/favicon/android-icon-192x192.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="96x96" href="assets/favicon/favicon-96x96.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
+        <link rel="manifest" href="assets/favicon/manifest.json">
+        <meta name="msapplication-TileColor" content="#ffffff">
+        <meta name="msapplication-TileImage" content="assets/favicon/ms-icon-144x144.png">
+        <meta name="theme-color" content="#1539CF">
         <!-- CSS -->
         <link rel="stylesheet" href="assets/css/normalize.css">
         <link rel="stylesheet" href="assets/css/styles.css">
@@ -15,7 +33,7 @@
             <small class="tiny">09/18&#8239;&mdash;&#8239;01/19</small>
             <h1 class="title title--big">Human<br> Centered<br> Design</h1>
             <h2 class="title title--medium">Key<br> Performance<br> Indicator</h2>
-            <div class="container">
+            <div class="container container--noImage">
                 <p>
                     Key Performance Indicator ou KPI sont des mesures quantitatives qui permettent d’évaluer les
                     performances et l’efficacité du site, avec les résultats, on peut voir si les objectifs sont
@@ -123,7 +141,7 @@
                             Avoir un temps de chargement court demande plusieurs optimisations et du temps, néanmoins,
                             c’est une étape primordiale pour avoir un site performant. Et puis après toutes ces
                             optimisations, vous serez peut-être récompensé d’un magnifique 100 sur
-                            <a href="https://developers.google.com/speed/pagespeed/insights/">Google Page Insight</a>.
+                            <a class="link" href="https://developers.google.com/speed/pagespeed/insights/">Google Page Insight</a>.
                         </p>
                     </div>
                     <img class="container__img" src="assets/images/page-load.svg" alt="Illustration page load">
@@ -150,20 +168,18 @@
             <section class="section">
                 <h3 class="title">Data Driven Design</h3>
                 <div class="container">
-                    <div class="container__textBox">
-                        <p>
-                            Cette méthode divisée en quatre étapes vise à la répétition des étapes et à l’amélioration grâce au
-                            résultat obtenu avec les différents KPIs et A/B Tests mis en place. Afin d'avoir le site le plus
-                            efficace, il faut tester, modifier, retester et ainsi de suite jusqu’à avoir le résultat optimal.
-                        </p>
-                    </div>
+                    <p>
+                        Cette méthode divisée en quatre étapes vise à la répétition des étapes et à l’amélioration grâce au
+                        résultat obtenu avec les différents KPIs et A/B Tests mis en place. Afin d'avoir le site le plus
+                        efficace, il faut tester, modifier, retester et ainsi de suite jusqu’à avoir le résultat optimal.
+                    </p>
                     <img class="container__img" src="assets/images/data-driven.svg" alt="Illustration data driven design">
                 </div>
             </section>
             <!-- Données quantitatives -->
             <section class="section section--blue">
                 <h3 class="title">Données quantitatives</h3>
-                <div class="container">
+                <div class="container container--noImage">
                     <p>
                         Les KPIs donnent accès à des données quantitatives qui permettent d’améliorer le projet
                         contrairement aux données qualitatives qui permettent de penser le projet.
@@ -180,8 +196,8 @@
         <footer class="section section--black">
             <ul class="list list--uppercase">
                 <li class="list__item">Réalisé avec &hearts;</li>
-                <li class="list__item">Par<a href="https://benjamindossantos.be"> Benjamin Dos santos</a></li>
-                <li class="list__item"><a href="http://dwm.re">DWM</a> | <a href="https://www.heaj.be/fr">HEAJ</a> &copy;</li>
+                <li class="list__item">Par<a class="link" href="https://benjamindossantos.be"> Benjamin Dos santos</a></li>
+                <li class="list__item"><a class="link" href="http://dwm.re">DWM</a> | <a class="link" href="https://www.heaj.be/fr">HEAJ</a> &copy;</li>
             </ul>
         </footer>
     </body>
