add link hover animation + fonts woff2 format

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Key Performance Indicator | Human Centered Design</title>
-        <link href="https://fonts.googleapis.com/css?family=Archivo+Black|Work+Sans:400,600,800" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Archivo+Black|Work+Sans:400,600,700" rel="stylesheet">
         <!-- Favicon -->
         <link rel="apple-touch-icon" sizes="57x57" href="assets/favicon/apple-icon-57x57.png">
         <link rel="apple-touch-icon" sizes="60x60" href="assets/favicon/apple-icon-60x60.png">
@@ -141,7 +141,7 @@
                             Avoir un temps de chargement court demande plusieurs optimisations et du temps, néanmoins,
                             c’est une étape primordiale pour avoir un site performant. Et puis après toutes ces
                             optimisations, vous serez peut-être récompensé d’un magnifique 100 sur
-                            <a class="link" href="https://developers.google.com/speed/pagespeed/insights/">Google Page Insight</a>.
+                            <a class="link link--blue" href="https://developers.google.com/speed/pagespeed/insights/">Google Page Insight</a>.
                         </p>
                     </div>
                     <img class="container__img" src="assets/images/page-load.svg" alt="Illustration page load">
