fix file optimizations

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Key Performance Indicator | Human Centered Design</title>
-        <link href="https://fonts.googleapis.com/css?family=Archivo+Black|Work+Sans:400,600,700" rel="stylesheet">
         <!-- Favicon -->
         <link rel="apple-touch-icon" sizes="57x57" href="assets/favicon/apple-icon-57x57.png">
         <link rel="apple-touch-icon" sizes="60x60" href="assets/favicon/apple-icon-60x60.png">
@@ -120,7 +119,7 @@
                             beaucoup d’utilisateurs qui ont rebondis peut être une bonne chose comme une mauvaise.
                         </p>
                     </div>
-                    <img class="container__img" src="https://placehold.it/150" alt="">
+                    <img class="container__img container__img--bigger" src="assets/images/rebond.svg" alt="">
                 </div>
             </section>
             <!-- Page load -->
